// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <Img> with isLoaded prop 1`] = `
<Img
  blur={2}
  image="image.jpg"
  isLoaded={true}
  opacity={0.9}
  scale={1}
>
  <styled.div
    blur={2}
    isLoaded={true}
    opacity={0.9}
    scale={1}
    style={
      Object {
        "backgroundImage": "url(\\"image.jpg\\"",
      }
    }
  >
    <div
      className="sc-bdVaJa eAwpDA"
      opacity={0.9}
      scale={1}
      style={
        Object {
          "backgroundImage": "url(\\"image.jpg\\"",
        }
      }
    />
  </styled.div>
</Img>
`;

exports[`should render <Img> without isLoaded prop 1`] = `
<Img
  blur={2}
  image="image.jpg"
  isLoaded={false}
  opacity={0.9}
  scale={1}
>
  <styled.div
    blur={2}
    isLoaded={false}
    opacity={0.9}
    scale={1}
    style={
      Object {
        "backgroundImage": "url(\\"image.jpg\\"",
      }
    }
  >
    <div
      className="sc-bdVaJa bokVrV"
      opacity={0.9}
      scale={1}
      style={
        Object {
          "backgroundImage": "url(\\"image.jpg\\"",
        }
      }
    />
  </styled.div>
</Img>
`;
